@@ -6,6 +6,7 @@ http://www.bjmaxinfo.com
 changes in version 2.2.2 	(unreleased)
 ------------------------------------------
 package corner.orm.tapestry.component
+* 提出AbstractSelectFilter方法里面的getLabelField,供子类调用.
 * AbstractSelectFilter实现ISelectFilter接口。
 * 删除DefaultSelectFilter的接口ISelectFilter,采用抽象的父类
 * component下面几个java文件均过期，采用select下面新的组件。
